import type { BaseTranslation } from '../i18n-types';

const en = {
  CONFIRM: 'Confirm',
  SEARCH: 'Search',
  AVAILABLE: 'Available',
  TIME: 'Time',
  BUILDING: 'Building',
  TOOLS: 'Tools',
  TYPE: 'Type',
  RESERVE: 'Reserve',
  OCCUPIED: 'Occupied',
  MY_CALENDAR: 'My Calendar',
  SETTINGS: 'Settings',
  NO_UPCOMING_BOOKINGS: 'You have no upcoming bookings.',
  LOGOUT: 'Log Out',
  LOGIN: 'Log In',
  BOOKING_DETAILS: 'Booking Details',
  STARTS: 'Starts',
  ENDS: 'Ends',
  ROOM: 'Room',
  TITLE: 'Title',
  SHOW_UPCOMING_RESERVATIONS: 'Show upcoming reservations',
  LOADING: 'Loading...',
  ERROR: 'ERROR',
  NOTHING_TO_SHOW: 'Nothing to show...',
  BOOKING_UPDATED_SUCCESSFULLY: 'Booking updated successfully.',
  BOOKING_TITLE: 'Booking title',
  CANCEL_BOOKING_TITLE: 'Cancel booking',
  CANCEL_BOOKING_MESSAGE: 'Are you sure you want to cancel this booking?',
  CANCEL_BOOKING_NO: 'No',
  CANCEL_BOOKING_YES: 'Yes, Cancel',
  CANCEL: 'Cancel',
  MODIFY: 'Modify',
  SEARCH_ROOMS_BY_CODE: 'Search rooms by code...',
  USERNAME: 'Username',
  PASSWORD: 'Password',
  GO_BACK_HOME: 'Go back to Home screen!',
  SEARCH_ROOM_TYPES: 'Search room types...',
  START_DATE_FUTURE: 'Start date must be in the future.',
  END_DATE_BEFORE_START: 'End date cannot be earlier than start date.',
  SELECT_START_DATE: 'Please, select start date first.',
  SELECT_START_AND_END: 'Please select both start and end dates.',
  RESET_CONFIRM: 'Are you sure?',
  RESET_WARNING: 'This will reset your date selections.',
  CLEAR: 'Yes, Clear',
  SEARCH_EQUIPMENT: 'Search equipment...',
  SEARCH_BUILDING: 'Search building by name...',
  BOOKING_UPDATED: 'Booking updated successfully.',
  BOOKING_CREATED: 'Booking created successfully.',
  SAVE: 'Save',
  USERNAME_FORMAT: "Username must be in the format 'ab12345'.",
  PASSWORD_REQUIRED: 'Password is required.',
  SEARCH_TAB: 'Search',
  CLOSE: 'Close',
  SELECT_TIME_RANGE:
    'Select the time range to search for available classrooms.',
  EMPTY_BOOKINGS: 'Empty booking',
  SELECT_BOOKING_TIME: 'Please select booking time.',
  SELECTED_LANGUAGE: 'Selected language:',
  SELECT_LANGUAGE: 'Select language',
} satisfies BaseTranslation;

export default en;
