export const timeArray = [
  { hour: 6, value: '06:00:00' },
  { hour: 6, value: '06:15:00' },
  { hour: 6, value: '06:30:00' },
  { hour: 6, value: '06:45:00' },
  { hour: 7, value: '07:00:00' },
  { hour: 7, value: '07:15:00' },
  { hour: 7, value: '07:30:00' },
  { hour: 7, value: '07:45:00' },
  { hour: 8, value: '08:00:00' },
  { hour: 8, value: '08:15:00' },
  { hour: 8, value: '08:30:00' },
  { hour: 8, value: '08:45:00' },
  { hour: 9, value: '09:00:00' },
  { hour: 9, value: '09:15:00' },
  { hour: 9, value: '09:30:00' },
  { hour: 9, value: '09:45:00' },
  { hour: 10, value: '10:00:00' },
  { hour: 10, value: '10:15:00' },
  { hour: 10, value: '10:30:00' },
  { hour: 10, value: '10:45:00' },
  { hour: 11, value: '11:00:00' },
  { hour: 11, value: '11:15:00' },
  { hour: 11, value: '11:30:00' },
  { hour: 11, value: '11:45:00' },
  { hour: 12, value: '12:00:00' },
  { hour: 12, value: '12:15:00' },
  { hour: 12, value: '12:30:00' },
  { hour: 12, value: '12:45:00' },
  { hour: 13, value: '13:00:00' },
  { hour: 13, value: '13:15:00' },
  { hour: 13, value: '13:30:00' },
  { hour: 13, value: '13:45:00' },
  { hour: 14, value: '14:00:00' },
  { hour: 14, value: '14:15:00' },
  { hour: 14, value: '14:30:00' },
  { hour: 14, value: '14:45:00' },
  { hour: 15, value: '15:00:00' },
  { hour: 15, value: '15:15:00' },
  { hour: 15, value: '15:30:00' },
  { hour: 15, value: '15:45:00' },
  { hour: 16, value: '16:00:00' },
  { hour: 16, value: '16:15:00' },
  { hour: 16, value: '16:30:00' },
  { hour: 16, value: '16:45:00' },
  { hour: 17, value: '17:00:00' },
  { hour: 17, value: '17:15:00' },
  { hour: 17, value: '17:30:00' },
  { hour: 17, value: '17:45:00' },
  { hour: 18, value: '18:00:00' },
  { hour: 18, value: '18:15:00' },
  { hour: 18, value: '18:30:00' },
  { hour: 18, value: '18:45:00' },
  { hour: 19, value: '19:00:00' },
  { hour: 19, value: '19:15:00' },
  { hour: 19, value: '19:30:00' },
  { hour: 19, value: '19:45:00' },
  { hour: 20, value: '20:00:00' },
  { hour: 20, value: '20:15:00' },
  { hour: 20, value: '20:30:00' },
  { hour: 20, value: '20:45:00' },
  { hour: 21, value: '21:00:00' },
  { hour: 21, value: '21:15:00' },
  { hour: 21, value: '21:30:00' },
  { hour: 21, value: '21:45:00' },
  { hour: 22, value: '22:00:00' },
  { hour: 22, value: '22:15:00' },
  { hour: 22, value: '22:30:00' },
  { hour: 22, value: '22:45:00' },
  { hour: 23, value: '23:00:00' },
  { hour: 23, value: '23:15:00' },
  { hour: 23, value: '23:30:00' },
  { hour: 23, value: '23:45:00' },
];
