appId: com.daria111.mobilefrontend
---
- launchApp
- assertVisible: 'My Calendar'
- tapOn: 'My Calendar'
- assertVisible: 'You have no upcoming bookings.'
- tapOn: 'Search, tab, 1 of 3'
- tapOn: 'MY-100 Myaskovsky Building Available'
- tapOn: 'Reserve'
- tapOn:
    point: '92%,13%'
- tapOn: '06:00:00'
- tapOn: 'Confirm'
- assertVisible: 'Booking Details'
- tapOn: 'Reserve'
- assertVisible: 'Booking created successfully.'
- assertVisible: 'MY-100 Myaskovsky Building Available'
- tapOn: 'My Calendar'
- assertVisible: 'MY-100'
- runScript: ../src/scripts/getTomorrowDate.js
- assertVisible: '${output.getTomorrowDate.commaFormat} at 06.00 - ${output.getTomorrowDate.commaFormat} at 07.00'
- clearState