appId: com.daria111.mobilefrontend
---
- launchApp
- tapOn: 'MY-100 Myaskovsky Building Available'
- tapOn: 'Reserve'
- tapOn:
    point: '92%,13%'
- tapOn: '06:00:00'
- tapOn: 'Confirm'
- assertVisible: 'Booking Details'
- tapOn: 'Reserve'
- assertVisible: 'Booking created successfully.'
- assertVisible: 'MY-100 Myaskovsky Building Available'
- tapOn: 'My Calendar'
- assertVisible: 'MY-100'
- runScript: ../src/scripts/getTomorrowDate.js
- assertVisible: '${output.getTomorrowDate.dotFormat} at 6.00 - ${output.getTomorrowDate.dotFormat} at 7.00'
- assertVisible: 'Cancel'
- tapOn: 'Cancel'
- assertVisible: 'Cancel Booking'
- assertVisible: 'Are you sure you want to cancel this booking?'
- tapOn: 'Yes, Cancel'
- assertVisible: 'You have no upcoming bookings.'
- clearState 
