appId: com.daria111.mobilefrontend
---
- launchApp
- assertVisible: 'MY-100 Myaskovsky Building Available'
- tapOn: 'MY-100 Myaskovsky Building Available'
- assertVisible: 'Reserve'
- tapOn: 'Reserve'
- runScript: ../src/scripts/getTodayDate.js
- assertVisible: ${output.getTodayDate.spaceFormat}
- tapOn:
    point: '92%,13%'
- assertVisible: '06:00:00'
- scrollUntilVisible:
    element: '21:00:00'
- assertVisible: 'Confirm'
- tapOn: 'Confirm'
- assertVisible: 'Empty booking'
- tapOn: 'OK'
- tapOn: '21:00:00'
- tapOn: 'Confirm'
- assertVisible: 'Booking Details'
- assertVisible: 'Room: MY-100'
- runScript: ../src/scripts/getTomorrowDate.js
- assertVisible: 'Starts: ${output.getTomorrowDate.commaFormat} at 9:00 PM'
- assertVisible: 'Ends: ${output.getTomorrowDate.commaFormat} at 10:00 PM'
- tapOn: 'Reserve'
- assertVisible: 'Booking created successfully.'
- assertVisible: 'MY-100 Myaskovsky Building Available'
- tapOn: 'MY-100 Myaskovsky Building Available'
- tapOn: 'Reserve'
- scrollUntilVisible:
    element: '21:00:00 Reservation from Booking App'
- assertVisible: 'Jane Doe'
- clearState
