appId: com.daria111.mobilefrontend
tags: ["reset"]
---
- tapOn: "My Calendar, tab, 2 of 3"
- assertVisible: 'Cancel'
- tapOn: 'Cancel'
- assertVisible: 'Cancel Booking'
- assertVisible: 'Are you sure you want to cancel this booking?'
- tapOn: 'Yes, Cancel'
- assertVisible: 'You have no upcoming bookings.'
- clearState 