appId: com.daria111.mobilefrontend
---
- assertVisible: 'MY-100 Myaskovsky Building Available'
- tapOn: 'MY-100 Myaskovsky Building Available'
- assertVisible: 'MY-100'
- assertVisible: 'Reserve'
- scrollUntilVisible:
    element: 'Show upcoming reservations'
- tapOn: 'Show upcoming reservations'
- assertVisible: 'You have no upcoming bookings.'
- tapOn: 'Close'
- scrollUntilVisible:
    element: 'Reserve'
    direction: UP
- tapOn: 'Reserve'
- tapOn:
    point: '92%,13%'
- runScript: ../src/scripts/getTomorrowDate.js
- assertVisible: ${output.getTomorrowDate.spaceFormat}
- tapOn: '06:00:00'
- tapOn: 'Confirm'
- assertVisible: 'Booking Details'
- tapOn: 'Reserve'
- assertVisible: 'Booking created successfully.'
- assertVisible: 'MY-100 Myaskovsky Building Available'
- tapOn: 'MY-100 Myaskovsky Building Available'
- scrollUntilVisible:
    element: 'Show upcoming reservations'
- tapOn: 'Show upcoming reservations'
- assertVisible: 'Reservation from Booking App'
- assertVisible: 'MY-100'
- assertVisible: '${output.getTomorrowDate.dotFormat} at 06.00 - ${output.getTomorrowDate.dotFormat} at 07.00'
- tapOn: 'Close'
- clearState
